Fix spacing

--- a/src/Styles/StopBar/StopBar.css
+++ b/src/Styles/StopBar/StopBar.css
@@ -1,3 +1,5 @@
 .stopbar-container {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: flex-start;
 }
